# BLE_SDK_V2.1_4814

./: .gitignore  CMakeLists.txt
app/: CMakeLists.txt
app/freertos/: CMakeLists.txt  FreeRTOSConfig.h
app/freertos/ble/: CMakeLists.txt
app/freertos/ble/examples/: CMakeLists.txt
app/freertos/ble/examples/osapp_airsync/: CMakeLists.txt  aes.h  crc32.c  crc32.h  epb.c  epb_mmbp.c  epb_mmbp.h  md5.c  md5.h  osapp_airsync.c
app/freertos/ble/examples/osapp_ancs_client/: CMakeLists.txt  bx_app_config.h  osapp_ancs_client.c
app/freertos/ble/examples/osapp_dis_server/: bx_app_config.h  osapp_dis_server.c
app/freertos/ble/examples/osapp_uart_client/: CMakeLists.txt  bx_app_config.h  osapp_uart_client.c
app/freertos/ble/examples/osapp_uart_server/: osapp_uart_server.c
app/freertos/ble/tests/: CMakeLists.txt
app/freertos/ble/tests/peripheral/: CMakeLists.txt  peripheral_test.c
app/freertos/mesh/: CMakeLists.txt
app/freertos/mesh/adapter/: CMakeLists.txt  mesh_ble_time.c  mesh_ble_time.h  mesh_queued_msg.c  mesh_queued_msg.h  mesh_sched.c  mesh_sched.h  os_wrapper.c  os_wrapper.h  timer_wrapper.c  timer_wrapper.h
app/freertos/mesh/core/: CMakeLists.txt  access_pdu_decrypt.c  access_pdu_decrypt.h  access_pdu_encrpyt.c  access_pdu_encrypt.h  access_rx_process.c  access_rx_process.h  access_tx_process.c  access_tx_process.h  adv_bearer_rx.c  adv_bearer_rx.h  adv_bearer_tx.c  adv_bearer_tx.h  adv_mesh_msg_cache.c  adv_mesh_msg_cache.h  aes_128.c  aes_128.h  aes_ccm_cmac.c  aes_ccm_cmac.h  appkey_devkey_decrypt.c  appkey_devkey_decrypt.h  beacon.c  beacon.h  beacon_mesh_msg_cache.c  beacon_mesh_msg_cache.h  cache_management.c  cache_management.h  candidate.c  candidate.h  control_rx_process.c  control_rx_process.h  control_tx_process.c  control_tx_process.h  friend.c  friend.h  friendship.c  friendship.h  heartbeat.c  heartbeat.h  k2_derivation.c  (+51 more)
app/freertos/mesh/core/api/: CMakeLists.txt  mesh_core_api.c  mesh_core_api.h  mesh_core_error.h
app/freertos/mesh/core/core_config/: CMakeLists.txt  beacon_config.c  beacon_config.h  mesh_kr_client.c  mesh_kr_client.h  mesh_node_base.c  mesh_node_base.h  mesh_node_config.c  mesh_node_config.h  stack_mem_cfg.h
app/freertos/mesh/device_manager/: CMakeLists.txt  mesh_dm_error.h
app/freertos/mesh/device_manager/api/: CMakeLists.txt  device_manager_api.c  device_manager_api.h
app/freertos/mesh/device_manager/keys/: CMakeLists.txt  app_keys_dm.c  app_keys_dm.h  device_keys_dm.c  device_keys_dm.h  network_keys_dm.c  network_keys_dm.h
app/freertos/mesh/device_manager/node_save/: CMakeLists.txt  node_save.c  node_save.h  node_save_common.c  node_save_common.h  node_save_keys.c  node_save_keys.h  node_save_macro.h  node_save_misc.c  node_save_misc.h  node_save_model.c  node_save_model.h  node_save_onoffcount.c  node_save_onoffcount.h  node_save_onpowerup.c  node_save_onpowerup.h  node_save_scene.c  node_save_scene.h  node_save_scheduler.c  node_save_scheduler.h
app/freertos/mesh/examples/: CMakeLists.txt
app/freertos/mesh/examples/simple_tmjl_ctl_anl/: CMakeLists.txt  bx_app_config.h  mesh_app_hal.c  mesh_app_hal.h  mesh_user_main.c  mesh_user_main.h  node_setup.c  node_setup.h  sdk_mesh_config.h  sdk_mesh_config_pro.h  simple_ctl_anl_s.c  simple_ctl_anl_s.h
app/freertos/mesh/gatt/: CMakeLists.txt  mesh_gatt.c  mesh_gatt.h  mesh_gatt_cfg.c  mesh_gatt_cfg.h  mesh_gatt_error.h  mesh_gatt_filter.c  mesh_gatt_filter.h  mesh_gatt_proxy.c  mesh_gatt_proxy.h  mesh_gatt_serv_adv.c  mesh_gatt_serv_adv.h
app/freertos/mesh/gatt/api/: CMakeLists.txt  mesh_gatt_api.h  mesh_gatt_error.h
app/freertos/mesh/mesh_test/: CMakeLists.txt  mesh_iv_update_test.c  mesh_iv_update_test.h  mesh_kr_test.c  mesh_kr_test.h  mesh_test_config.h  mesh_ttl_test.c  mesh_ttl_test.h
app/freertos/mesh/model/: CMakeLists.txt  mesh_model.c  mesh_model.h  model_common.c  model_common.h  model_msg.c  model_msg.h  model_status_switch.c  model_status_switch.h
app/freertos/mesh/model/api/: CMakeLists.txt  config_client_events_api.h  config_server_events_api.h  model_servers_events_api.h
app/freertos/mesh/model/custom_models/: CMakeLists.txt  vendor_models_msg_handler.h
app/freertos/mesh/model/foundation_models/: CMakeLists.txt  foundation_common.c  foundation_common.h  foundation_msg_handler.c  model_publish.c  (+2 more)
app/freertos/mesh/provision/: CMakeLists.txt  advertising_interfaces.c  advertising_interfaces.h  provision.c  provision.h  provision_comm.c  provision_comm.h  provision_fsm_comm.c  provision_fsm_comm.h  provision_security.c  provision_security.h  provision_service_adv_interfaces.c  provision_service_adv_interfaces.h  provisioner_fsm.c  provisioner_fsm.h  provisioner_intf.c  provisioner_intf.h  unprov_adv_interfaces.c  unprov_adv_interfaces.h  unprov_device_fsm.c  unprov_device_fsm.h  unprov_device_intf.c  unprov_device_intf.h
app/freertos/mesh/uart_ctrl/: CMakeLists.txt  client_server_uart_test.c  client_server_uart_test.h  mesh_uart_config.h  mesh_uart_ctrl.c  mesh_uart_ctrl.h  provisioner_uart_test.c  provisioner_uart_test.h  uart_debug_test.c  uart_debug_test.h  uart_log_test.c  uart_log_test.h  uart_main.c  uart_main.h
app/freertos/mesh/unit_test/: CMakeLists.txt  unit_test_config.h
app/freertos/utils/: CMakeLists.txt  ble_task.c  ble_task.h  os_bridge.c  os_bridge.h  osapp_calendar.c  osapp_calendar.h  osapp_config.h  osapp_svc_manager.c  osapp_svc_manager.h  osapp_task.c  osapp_task.h  osapp_utils.c  osapp_utils.h  osmsg_queue.h  task_init.c  task_init.h
app/freertos/utils/bond/: CMakeLists.txt  ble_bond_errors.h  bond_manage.c  bond_manage.h  bond_save.c  bond_save.h  bond_save_db_cccd.c  bond_save_db_cccd.h  bond_save_flash.c  bond_save_flash.h  bond_save_security.c  bond_save_security.h  bond_save_test.c
app/network_processor/host_test/: CMakeLists.txt  bx_app_config.h  main.c  main_calib32k.c
app/network_processor/host_test/apollo_00_keil5/: host_test.uvoptx  host_test.uvprojx
plf/apollo_00/bootloader/boot_ram/: CMakeLists.txt  adc_battery.c  adc_battery.h  boot_ram.h  boot_ram_link.txt  bx_app_config.h  bx_crc32.c  main.c
(+425 files in other folders)
