set(SRC
${CMAKE_CURRENT_SOURCE_DIR}/beacon.c
${CMAKE_CURRENT_SOURCE_DIR}/mesh_env.c
${CMAKE_CURRENT_SOURCE_DIR}/mesh_iv_operation.c
${CMAKE_CURRENT_SOURCE_DIR}/mesh_kr_comm.c
${CMAKE_CURRENT_SOURCE_DIR}/mesh_kr_server.c
${CMAKE_CURRENT_SOURCE_DIR}/osapp_mesh.c
${CMAKE_CURRENT_SOURCE_DIR}/security.c
${CMAKE_CURRENT_SOURCE_DIR}/virt_addr_mngt.c
${CMAKE_CURRENT_SOURCE_DIR}/mesh_stack_init.c
${CMAKE_CURRENT_SOURCE_DIR}/access_pdu_decrypt.c
${CMAKE_CURRENT_SOURCE_DIR}/access_pdu_encrpyt.c
${CMAKE_CURRENT_SOURCE_DIR}/access_rx_process.c
${CMAKE_CURRENT_SOURCE_DIR}/access_tx_process.c
${CMAKE_CURRENT_SOURCE_DIR}/adv_bearer_tx.c
${CMAKE_CURRENT_SOURCE_DIR}/adv_mesh_msg_cache.c
${CMAKE_CURRENT_SOURCE_DIR}/aes_128.c
${CMAKE_CURRENT_SOURCE_DIR}/aes_ccm_cmac.c
${CMAKE_CURRENT_SOURCE_DIR}/appkey_devkey_decrypt.c
${CMAKE_CURRENT_SOURCE_DIR}/cache_management.c
${CMAKE_CURRENT_SOURCE_DIR}/candidate.c
${CMAKE_CURRENT_SOURCE_DIR}/model_rx.c
${CMAKE_CURRENT_SOURCE_DIR}/network_msg_cache.c
${CMAKE_CURRENT_SOURCE_DIR}/network_pdu_decrypt.c
${CMAKE_CURRENT_SOURCE_DIR}/network_pdu_encrypt.c
${CMAKE_CURRENT_SOURCE_DIR}/network_rx_process.c
${CMAKE_CURRENT_SOURCE_DIR}/network_tx_process.c
${CMAKE_CURRENT_SOURCE_DIR}/obfuscation.c
${CMAKE_CURRENT_SOURCE_DIR}/reassembly.c
${CMAKE_CURRENT_SOURCE_DIR}/adv_bearer_rx.c
${CMAKE_CURRENT_SOURCE_DIR}/control_rx_process.c
${CMAKE_CURRENT_SOURCE_DIR}/control_tx_process.c
${CMAKE_CURRENT_SOURCE_DIR}/lower_rx_process.c
${CMAKE_CURRENT_SOURCE_DIR}/lower_tx_process.c
${CMAKE_CURRENT_SOURCE_DIR}/upper_rx_process.c
${CMAKE_CURRENT_SOURCE_DIR}/upper_tx_process.c
${CMAKE_CURRENT_SOURCE_DIR}/beacon_mesh_msg_cache.c
${CMAKE_CURRENT_SOURCE_DIR}/mesh_reset_database.c
${CMAKE_CURRENT_SOURCE_DIR}/k2_derivation.c
${CMAKE_CURRENT_SOURCE_DIR}/friend.c
${CMAKE_CURRENT_SOURCE_DIR}/low_power.c
${CMAKE_CURRENT_SOURCE_DIR}/friendship.c
${CMAKE_CURRENT_SOURCE_DIR}/heartbeat.c
)

add_sources(MESH_SRCS ${SRC})
target_include_directories(mesh_inc
INTERFACE ${CMAKE_CURRENT_SOURCE_DIR}
)

add_subdirectory(api)
add_subdirectory(core_config)
