
add_subdirectory(generic_onoff_server_friend)
add_subdirectory(generic_onoff_server_low_power)
add_subdirectory(simple_generic_onoff_server)
add_subdirectory(simple_light_ctl_server)
add_subdirectory(simple_light_hsl_server)
add_subdirectory(simple_light_hsl_ctl)
add_subdirectory(simple_time_scheduler_server)
add_subdirectory(simple_tmjl_ctl_anl)
add_subdirectory(simple_tmjl_button_anl)


